Tracker design fixes

--- a/app/assets/stylesheets/default/theme.css.scss
+++ b/app/assets/stylesheets/default/theme.css.scss
@@ -614,7 +614,8 @@ button {
 }
 
 .tracker_line {
-    min-height: 2.5em;
+    min-height: 3em;
+    max-height: 4em;
     border: 1px solid #888;
 }
 
@@ -624,7 +625,8 @@ button {
     background-color: #555;
     margin: 0;
     padding: 0;
-    min-height: 2.5em;
+    min-height: 3em;
+    max-height: 4em;
     padding-left: 5px;
 }
 
@@ -632,7 +634,7 @@ button {
     float: left;
     width: 20%;
     background-color: #555;
-    min-height: 2.5em;
+    min-height: 3em;
     max-height: 4em;
     padding-right: 5px;
     text-align: right;
